--- a/test04.html
+++ b/test04.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAVI CINEMA</title>
-    <link rel="stylesheet" href="01.css">
+    <link rel="stylesheet" href=".01.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
@@ -13,12 +13,11 @@
             background-color: blue;
         }
     </style>
+     <link rel="stylesheet" href="./01.css" />
 </head>
 
 <body>
 
-</html>
-<script src="02.js"></script>
 <div class="mytitle">
     <main>
         <h1>NAVI CINEMA</h1>
@@ -37,358 +36,10 @@
         <li>« Don’t waste your film recommendations on shitty people who don’t deserve it. » - Paul Thomas Anderson</li>
     </ul>
 </nav>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/9cqNxx0GxF0bflZmeSMuL5tnGzr.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">The Shawshank Redemption</strong>
-        <p class="info">
-            <span class="date">1994-09-23</span>
-            <span>
-                <em class="average">8.8</em>
-            </span>
-        </p>
-        <p class="desc">Imprisoned in the 1940s for the double murder of his wife and her lover, upstanding banker Andy
-            Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an
-            amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates --
-            including an older prisoner named Red -- for his integrity and unquenchable sense of hope.</p>
-        <button type="button" onclick="alert('278')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/3bhkrj58Vtu7enYsRolD1fZdja1.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">The Godfather</strong>
-        <p class="info">
-            <span class="date">1972-03-14</span>
-            <span>
-                <em class="average">8.7</em>
-            </span>
-        </p>
-        <p class="desc">Spanning the years 1945 to 1955, a chronicle of the fictional Italian-American Corleone
-            crime family. When organized crime family patriarch, Vito Corleone barely survives an attempt on his
-            life, his youngest son, Michael steps in to take care of the would-be killers, launching a campaign
-            of bloody revenge.</p>
-        <button type="button" onclick="alert('238')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/hek3koDUyRQk7FIhPXsa6mT2Zc3.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">The Godfather Part II</strong>
-        <p class="info">
-            <span class="date">1974-12-20</span>
-            <span>
-                <em class="average">8.6</em>
-            </span>
-        </p>
-        <p class="desc">In the continuing saga of the Corleone crime family, a young Vito Corleone grows up in
-            Sicily and in 1910s New York. In the 1950s, Michael Corleone attempts to expand the family business
-            into Las Vegas, Hollywood and Cuba.</p>
-        <button type="button" onclick="alert('240')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/sF1U4EUQS8YHUYjNl3pMGNIQyr0.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">Schindler's List</strong>
-        <p class="info">
-            <span class="date">1993-12-15</span>
-            <span>
-                <em class="average">8.6</em>
-            </span>
-        </p>
-        <p class="desc">The true story of how businessman Oskar Schindler saved over a thousand Jewish lives
-            from the Nazis while they worked as slaves in his factory during World War II.</p>
-        <button type="button" onclick="alert('424')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/ow3wq89wM8qd5X7hWKxiRfsFf9C.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">12 Angry Men</strong>
-        <p class="info">
-            <span class="date">1957-04-10</span>
-            <span>
-                <em class="average">8.6</em>
-            </span>
-        </p>
-        <p class="desc">The defense and the prosecution have rested and the jury is filing into the jury room to
-            decide if a young Spanish-American is guilty or innocent of murdering his father. What begins as an
-            open and shut case soon becomes a mini-drama of each of the jurors' prejudices and preconceptions
-            about the trial, the accused, and each other.</p>
-        <button type="button" onclick="alert('389')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/39wmItIWsg5sZMyRUHLkWBcuVCM.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">Spirited Away</strong>
-        <p class="info">
-            <span class="date">2001-04-18</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">A young girl, Chihiro, becomes trapped in a strange new world of spirits. When her
-            parents undergo a mysterious transformation, she must call upon the courage she never knew she had
-            to free her family.</p>
-        <button type="button" onclick="alert('129')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px;height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/lfRkUr7DYdHldAqi3PwdQGBRBPM.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">Dilwale Dulhania Le Jayenge</strong>
-        <p class="info">
-            <span class="date">1995-10-20</span>
-            <span>
-                <em class="average">8.6</em>
-            </span>
-        </p>
-        <p class="desc">Raj is a rich, carefree, happy-go-lucky second generation NRI. Simran is the daughter of
-            Chaudhary Baldev Singh, who in spite of being an NRI is very strict about adherence to Indian
-            values. Simran has left for India to be married to her childhood fiancé. Raj leaves for India with a
-            mission at his hands, to claim his lady love under the noses of her whole family. Thus begins a
-            saga.</p>
-        <button type="button" onclick="alert('19404')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/qJ2tW6WMUDux911r6m7haRef0WH.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">The Dark Knight</strong>
-        <p class="info">
-            <span class="date">2008-07-16</span>
-            <span>
-                <em class="average">8.6</em>
-            </span>
-        </p>
-        <p class="desc">Batman raises the stakes in his war on crime. With the help of Lt. Jim Gordon and
-            District Attorney Harvey Dent, Batman sets out to dismantle the remaining criminal organizations
-            that plague the streets. The partnership proves to be effective, but they soon find themselves prey
-            to a reign of chaos unleashed by a rising criminal mastermind known to the terrified citizens of
-            Gotham as the Joker.</p>
-        <button type="button" onclick="alert('155')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/7IiTTgloJzvGI1TAYymCfbfl3vT.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">Parasite</strong>
-        <p class="info">
-            <span class="date">2019-05-30</span>
-            <span>
-                <em class="average">8.6</em>
-            </span>
-        </p>
-        <p class="desc">All unemployed, Ki-taek's family takes peculiar interest in the wealthy and glamorous
-            Parks for their livelihood until they get entangled in an unexpected incident.</p>
-        <button type="button" onclick="alert('496243')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/8VG8fDNiy50H4FedGwdSVUPoaJe.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">The Green Mile</strong>
-        <p class="info">
-            <span class="date">1999-12-10</span>
-            <span>
-                <em class="average">8.6</em>
-            </span>
-        </p>
-        <p class="desc">A supernatural tale set on death row in a Southern prison, where gentle giant John
-            Coffey possesses the mysterious power to heal people's ailments. When the cell block's head guard,
-            Paul Edgecomb, recognizes Coffey's miraculous gift, he tries desperately to help stave off the
-            condemned man's execution.</p>
-        <button type="button" onclick="alert('497')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/q719jXXEzOoYaps6babgKnONONX.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">Your Name.</strong>
-        <p class="info">
-            <span class="date">2016-08-26</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">High schoolers Mitsuha and Taki are complete strangers living separate lives. But one
-            night, they suddenly switch places. Mitsuha wakes up in Taki’s body, and he in hers. This bizarre
-            occurrence continues to happen randomly, and the two must adjust their lives around each other.</p>
-        <button type="button" onclick="alert('372058')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/d5iIlFn5s0ImszYzBPb8JPIfbXD.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">Pulp Fiction</strong>
-        <p class="info">
-            <span class="date">1994-09-10</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">A burger-loving hit man, his philosophical partner, a drug-addled gangster's moll and a
-            washed-up boxer converge in this sprawling, comedic crime caper. Their adventures unfurl in three
-            stories that ingeniously trip back and forth in time.</p>
-        <button type="button" onclick="alert('680')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/rCzpDGLbOoPwLjy3OAm5NUPOTrC.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">The Lord of the Rings: The Return of the King</strong>
-        <p class="info">
-            <span class="date">2003-12-01</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">As armies mass for a final battle that will decide the fate of the world--and powerful,
-            ancient forces of Light and Dark compete to determine the outcome--one member of the Fellowship of
-            the Ring is revealed as the noble heir to the throne of the Kings of Men. Yet, the sole hope for
-            triumph over evil lies with a brave hobbit, Frodo, who, accompanied by his loyal friend Sam and the
-            hideous, wretched Gollum, ventures deep into the very dark heart of Mordor on his seemingly
-            impossible quest to destroy the Ring of Power.&ZeroWidthSpace;</p>
-        <button type="button" onclick="alert('이 영화의 id 값은 => 122 입니다.')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/arw2vcBveWOVZr6pxd9XTd1TdQa.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">Forrest Gump</strong>
-        <p class="info">
-            <span class="date">1994-06-23</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">A man with a low IQ has accomplished great things in his life and been present during
-            significant historic events—in each case, far exceeding what anyone imagined he could do. But
-            despite all he has achieved, his one true love eludes him.</p>
-        <button type="button" onclick="alert('13')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/aHRUsFln97FlIdsvYKFT3z5ubYE.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">The Count of Monte-Cristo</strong>
-        <p class="info">
-            <span class="date">2024-06-28</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">Edmond Dantes becomes the target of a sinister plot and is arrested on his wedding day
-            for a crime he did not commit. After 14 years in the island prison of Château d’If, he manages a
-            daring escape. Now rich beyond his dreams, he assumes the identity of the Count of Monte-Cristo and
-            exacts his revenge on the three men who betrayed him.</p>
-        <button type="button" onclick="alert('1084736')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/bX2xnavhMYjWDoZp1VM6VnU1xwe.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">The Good, the Bad and the Ugly</strong>
-        <p class="info">
-            <span class="date">1966-12-22</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">While the Civil War rages on between the Union and the Confederacy, three men – a quiet
-            loner, a ruthless hitman, and a Mexican bandit – comb the American Southwest in search of a
-            strongbox containing $200,000 in stolen gold.</p>
-        <button type="button" onclick="alert('429')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/aKuFiU82s5ISJpGZp7YkIr3kCUd.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">GoodFellas</strong>
-        <p class="info">
-            <span class="date">1990-09-12</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">The true story of Henry Hill, a half-Irish, half-Sicilian Brooklyn kid who is adopted by
-            neighbourhood gangsters at an early age and climbs the ranks of a Mafia family under the guidance of
-            Jimmy Conway.</p>
-        <button type="button" onclick="alert('769')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/8OKmBV5BUFzmozIC3pPWKHy17kx.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">Seven Samurai</strong>
-        <p class="info">
-            <span class="date">1954-04-26</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">A samurai answers a village's request for protection after he falls on hard times. The
-            town needs protection from bandits, so the samurai gathers six others to help him teach the people
-            how to defend themselves, and the villagers provide the soldiers with food.</p>
-        <button type="button" onclick="alert('346')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/t2Ew8NZ8Ci2kqmoecZUNQUFDJnQ.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">Impossible Things</strong>
-        <p class="info">
-            <span class="date">2021-06-17</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">After the death of her abusive husband, Matilde finds her new best friend in Miguel, her
-            young, insecure, and disoriented neighbor.</p>
-        <button type="button" onclick="alert('667257')">View</button>
-    </div>
-</li>
-
-<li class="movieListItem"
-    style="height:600px; width:400px; float:left; margin:0 10px; background:url('https://image.tmdb.org/t/p/w500/k9tv1rXZbOhH7eiCk378x61kNQ1.jpg') no-repeat center center; background-size:cover;">
-    <div class="tBox">
-        <strong class="tit">Grave of the Fireflies</strong>
-        <p class="info">
-            <span class="date">1988-04-16</span>
-            <span>
-                <em class="average">8.5</em>
-            </span>
-        </p>
-        <p class="desc">In the final months of World War II, 14-year-old Seita and his sister Setsuko are
-            orphaned when their mother is killed during an air raid in Kobe, Japan. After a falling out with
-            their aunt, they move into an abandoned bomb shelter. With no surviving relatives and their
-            emergency rations depleted, Seita and Setsuko struggle to survive.</p>
-        <button type="button" onclick="alert('12477')">View</button>
-    </div>
-</li>
 </ul>
-</div>
+<div id="movie-container"></div>
 <footer>Copyright (c) 2024 navithecat
 </footer>
+<script src="02.js"></script>
 </body>
+</html>
